2005-02-15  Richard Hult  <richard@imendio.com>

	* data/glade/task-dialog.glade: Disable search.

2005-02-13  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c (planner_task_tree_insert_task): Put new
	tasks at the bottom if there is no parent. Fixes bug #156616.

2005-02-13  Richard Hult  <richard@imendio.com>

	* src/planner-project-properties.c (mpp_calendar_popdown)
	(mpp_calendar_cancel_clicked_cb, mpp_calendar_save_date)
	(mpp_calendar_ok_clicked_cb, mpp_calendar_set_date)
	(mpp_calendar_today_clicked_cb, mpp_calendar_double_click_cb)
	(mpp_grab_on_window, mpp_calendar_popup_helper)
	(mpp_calendar_popup, mpp_calendar_button_toggled_cb)
	(planner_project_properties_new): Add a calendar popup to select
	the start date with.

	* src/planner-window.c (window_do_save_as): Set default response.

	* src/planner-task-tree.c (task_tree_work_data_func)
	(task_tree_duration_data_func): Set cell content to "N/A" for
	milestones.

	* libplanner/mrp-task-manager.c
	(task_manager_calculate_task_finish): Remove old code.

	* src/planner-gantt-row.c (gantt_row_event): Update sensitivity
	for the context menu items.
	(gantt_row_get_selected_tasks): Add.

	* src/planner-task-tree.c (task_tree_tree_view_popup_menu): Update
	sensitivity and position the menu better.

	* src/planner-task-popup.c
	(planner_task_popup_update_sensitivity): Add, use to consistently
	set sensitivity in the task context menu.

	* src/planner-task-dialog.c (task_dialog_update_sensitivity): Make
	it possible to set complete and priority always, but not work or
	duration or fixed duration for milestones.
	(task_dialog_update_title): Simplify.

	* libplanner/mrp-task-manager.c
	(task_manager_get_task_units_intervals): Allow this to be called
	for milestone tasks.
	(task_manager_calculate_milestone_work_start): Add, gets the work
	start for milestones.
	(task_manager_calculate_task_finish): Use the above for milestone
	tasks.

	* libegg/recent-files/egg-recent-view-uimanager.c